docs/1.1.0/Getting Started.md
# Getting Started
This guide will take you through installing and using Pollen for the first time, as well as some helpful optimization tips.

### Installation
1. Download the latest release [here](https://github.com/MorphoMonarchy/Pollen/tree/master).
2. Open GameMaker and find the menu: **Tools > Import Local Package**.
3. Browse for the Pollen.yymps file.
4. Click on the "Pollen" folder under "Package Resources" and then click "Add".
5. Can optionally click "Add All" button if you want the example project too.
6. Click "Import" and you should see the "Pollen" folder in your Asset Browser.

### Setup
1. Navigate to `scr_pollen_config_pfx` script.
2. Copy the following structs and paste them into the `global.pollen_confix_pfx` array

~~~
{type: "myType",},
{
   system: "mySystem",
   emitterList: [
      {type: "myType",}
   ]
}
~~~

3. Copy and paste the following code into a create event of an object or a global script: `Pollen.Stream("mySystem")`
4. Use examples commented in `scr_pollen_config_pfx` or read the [Config JSON](<Import Particles.mod/>) docs for info on how to configure your particle types/systems more.
5. If live-reload is enabled, you must [disable the file system sandbox](https://manual.gamemaker.io/lts/en/Additional_Information/The_File_System.htm) under Game Options -> [platform] -> 'Disable file system sandbox' in order to see live changes.
6. Click "Run" or press f5 to compile and run your project.
7. Check logs often for warnings and/or errors especially if you aren't seeing live updates!
8. Profit.

### Troubleshooting

- If live-reload is not working, make sure the [file system sandbox](https://manual.gamemaker.io/lts/en/Additional_Information/The_File_System.htm) is disabled, especially if you get a "not allowing file operation" error.

- Make sure not to rename any of the pollen scripts (especially 'scr_pollen_config_pfx' & 'scr_pollen_system').

- If everything is setup properly and you don't see any warnings or errors, but you still can't see your particle effects (or can only see certain ones) double check the properties in your systems/emitters/types would produce a visible result, especially the `depth`, `alpha`, `size`, `position`, `life`, & `enabled` values.

- Double check to make sure the names of the tags you pass in Pollen API matches the tags in 'scr_pollen_config_pfx'.

- If you notice that Pollen is not working in Mac or Ubuntu builds, but works in Windows, please [submit a bug report](https://github.com/MorphoMonarchy/Pollen/issues).


## Workflow Tips

### Design:

Games often utilize "copy and pasted" particle fx for both the sake of productivity as well as visual consistency for the player (it's nice when there's a win-win between devs and players). 

So what I recommend is designing a generic or 'base' design of a particle effect in either Pollen or GM's particle designer (though you could also work with other 3rd party editors if you want, but it might take a bit more work setting up). Then make variations by simply setting the 'template' property to the tag of the 'base' effect and make changes from there. 

For example, you could design a 'base' version of a fireball that looks like a normal fireball, then simply use it as a template in a new type and change the color property to get a blue fireball (see template examples in 'scr_pollen_config_pfx'). This could even be expanded to create an ice/electro-ball or more!

### Organization:

First and foremost, I recommend always defining your generic or 'base' types/system first (i.e. ones that will be used as templates), and also always declare your types before your systems/emitters. This will prevent errors from trying to read a type/system before it's defined.

It also might be useful to group together effects in ways that are relevant for your project. For example, you could group all your fireball type/system definitions with the rest of the'"magic' fx (think of them like GM's audio groups but for particle fx). 

This will make it easier if you need to load/destroy particle effects on the fly (for example if there are particle fx that only exist in one level and are never used for the rest of the game. See 'Optimization Tips' below for more info). It will also make it easier to find the effects you're looking for (especially if you utilize `#region` code folding). 

## Optimization Tips

For the intents and purposes of most projects, you could probably get away with having all of your particle effects defined in the `global.pollen_config_pfx` array. However, if you notice major hitching when you initially run the game, or every time you live-reload `scr_pollen_config_pfx`, or when using Pollen's setter methods during runtime, then you may need to break your effects up into multiple groups and manually import/clean-up your effects as you need them. The following steps explain how you could do this:

1. Optionally set the `POLLEN_AUTO_IMPORT_CONFIG_PFX` & `POLLEN_LIVE_UPDATE` macros found in `scr_pollen_config_macros` to `false` (this disables Pollen from automatically importing `scr_pollen_config_pfx` so you can load your effects according to your needs)

<p class="tip">
    Live-update only works with scr_pollen_config_pfx by default. So disabling these macros means you have to manually import any effects defined in it by using `Pollen.ImportPfx(global.pollen_config_pfx)`.
</p>

2. Create multiple arrays that represent different particle effect "groups" and define the corresponding Pollen JSON in them. The following example demonstrates one way you could do this:

~~~
// Particle FX needed throughout the entire game
pfx_global = [
    {type: "type_global_smoke", /*etc..*/},
    {
        system: "system_global_smoke",
        emitterList: [
            {type: "type_global_smoke", /*etc..*/}
        ],
    },
    /*etc..*/
];
// Particle FX needed for specific levels
pfx_lv1 = [
    {type: "type_lv1_rain", /*etc..*/},
    {type: "type_lv1_cloud", /*etc..*/},
    {
        system: "system_lv1_storm",
        emitterList: [
            {type: "type_lv1_rain", /*etc..*/},
            {type: "type_lv1_cloud", /*etc..*/},
        ],
    },
    /*etc..*/
];
pfx_lv2 = [
   {
        system: "system_lv2_snow",
        emitterList: [
            {
                type: {tag: "type_lv2_snow", /*etc..*/}, 
                /*etc..*/
            },
        ]
   },
    /*etc..*/
];
// And so on...
~~~

3. Import the particle fx groups you need by calling `Pollen.Import()` and pass in the array you want to import like the following example:

~~~
Pollen.ImportPfx(pfx_global);
Pollen.ImportPfx(pfx_lv1);
~~~

4. When you're ready to load the next group of particles, you can optionally call `Pollen.DestroyAll()` to clear previous data and then use `Pollen.Import` on the groups you need like the following example:

~~~
Pollen.DestroyAll() //<--- optional only if you need to save on memory
Pollen.ImportPfx(pfx_global); //<--- Only import this again if you call Pollen.DestroyAll() beforehand
Pollen.ImportPfx(pfx_lv2);
~~~

<p class="warn">
    As stated in the "FAQ" section, Pollen takes a small amount of memory per instance (roughly 0.1 - 0.3 mb per type/emitter/system). So, for most particles, you could probably get away with leaving them in memory (i.e. not destroying them) even when they're not needed anymore.
</p>

5. If you need to micromanage things, you can also manually destroy particle types/emitters/systems by passing their data into the corresponding functions:

~~~
var _typeData = Pollen.TypeTagGetData("type_lv1_rain");
Pollen.TypeDestroy(_typeData);

var _systemData = Pollen.SystemTagGetData("system_lv1_storm");
var _emitterData = _systemData.GetEmitterList()[0];
Pollen.EmitterDestroy(_emitterData);
Pollen.SystemDestroy(_systemData);
~~~

<p class="warn">
    Calling Pollen.SystemDestroy() will automatically destroy all of the system's emitters
    so there's no need to manually destroy all of them beforehand, but the prior example demonstrates
    how to manually destroy one if needed.
</p>

6. Keep in mind that, though GameMaker's particle backend is pretty fast, having a million particles on screen will slow things down regardless of how you optimize everything else. Plus, when it comes to VFX design, less is often more anyway. 


